# cmsc701-final

./: Cargo.toml  README.md  build.sh  parse_false_neg.py  parse_false_pos.py  run.sh  run_all.py  temp_out
data/test_output/: salmonella.naive.map
figs/: plot_heatmap.py  plot_line.py
results/hashmax/default/: build_time.csv  false_positive_rate.csv  false_positives.csv  file_size.csv  query_time.csv  reduction.csv  results.csv
results/hashmin/combo_1_1/: build_time.csv  false_positive_rate.csv  false_positives.csv  query_time.csv  results.csv
results/hashmin/combo_1_2/: build_time.csv  false_positive_rate.csv  false_positives.csv  query_time.csv  results.csv
results/hashmin/combo_2_1/: build_time.csv  false_positive_rate.csv  false_positives.csv  query_time.csv  results.csv
results/hashmin/combo_2_2/: build_time.csv  false_positive_rate.csv  false_positives.csv  query_time.csv  results.csv
results/hashmin/default/: build_time.csv  false_positive_rate.csv  false_positives.csv  file_size.csv  query_time.csv  results.csv
results/hashmin/delta_1/: build_time.csv  false_positive_rate.csv  false_positives.csv  query_time.csv  results.csv
results/hashmin/delta_2/: build_time.csv  false_positive_rate.csv  false_positives.csv  query_time.csv  results.csv
results/hashmin/delta_3/: build_time.csv  false_positive_rate.csv  false_positives.csv  query_time.csv  results.csv
results/hashmin/delta_4/: build_time.csv  false_positive_rate.csv  false_positives.csv  query_time.csv  reduction.csv  results.csv
results/hashmin/partial_1/: build_time.csv  (+4 more)
src/: shared.rs
(+90 files in other folders)
