[package]
name = "minimizer-sa"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
twox-hash = "2.1"
rand = "0.9.1"

[[bin]]
name = "buildsa"  # The name you want to give the binary
path = "src/bin/buildsa.rs"  # Path to the file you want to use
